Add EDA deployment on OCP

--- a/roles/aap_ocp_install/defaults/main.yml
+++ b/roles/aap_ocp_install/defaults/main.yml
@@ -24,4 +24,9 @@
 # aap_ocp_install_hub:
 #   instance_name:
 #   link_text:
+
+# Variable applicable to the EDA installation
+# aap_ocp_install_eda:
+#   instance_name:
+#   link_text:
 ...
