Additional checks for EDA variables, and ability to use custom EDA namespace

--- a/roles/aap_ocp_install/defaults/main.yml
+++ b/roles/aap_ocp_install/defaults/main.yml
@@ -27,6 +27,8 @@
 
 # Variable applicable to the EDA installation
 # aap_ocp_install_eda:
+#   namespace:
 #   instance_name:
+#   replicas: 
 #   link_text:
 ...
