--- a/roles/aap_ocp_install/tasks/install-eda.yml
+++ b/roles/aap_ocp_install/tasks/install-eda.yml
@@ -1,4 +1,18 @@
 ---
+- name: Create EDA controller namespace
+  kubernetes.core.k8s:
+    host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
+    api_key: "{{ __aap_ocp_install_auth_results['openshift_auth']['api_key'] }}"
+    validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
+    state: present
+    resource_definition: "{{ lookup('ansible.builtin.template', 'namespace.yaml.j2', template_vars=ns_vars) | from_yaml }}"
+    apply: true
+  vars:
+    ns_vars:
+      ns_name: "{{ aap_ocp_install_eda['namespace'] }}"
+  when:
+    - aap_ocp_install_eda['namespace'] is defined
+    
 - name: Create EDA instance
   kubernetes.core.k8s:
     host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
@@ -16,7 +30,7 @@
     kind: Route
     name: "{{ aap_ocp_install_eda['instance_name'] | mandatory }}"
     api_version: route.openshift.io/v1
-    namespace: "{{ aap_ocp_install_namespace | mandatory }}"
+    namespace: "{{ aap_ocp_install_eda['namespace'] | default(aap_ocp_install_namespace) }}"
   register: __aap_ocp_install_eda_route_result
   until: __aap_ocp_install_eda_route_result['resources']
   retries: 60  # Wait for 15 minutes (60*15/60)
