--- a/roles/aap_ocp_install/tasks/install-platform.yml
+++ b/roles/aap_ocp_install/tasks/install-platform.yml
@@ -1,5 +1,5 @@
 ---
-- name: Create EDA controller namespace
+- name: Create platform namespace
   kubernetes.core.k8s:
     host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
     api_key: "{{ __aap_ocp_install_auth_results['openshift_auth']['api_key'] }}"
@@ -9,55 +9,55 @@
     apply: true
   vars:
     ns_vars:
-      ns_name: "{{ aap_ocp_install_eda['namespace'] }}"
+      ns_name: "{{ aap_ocp_install_platform['namespace'] }}"
   when:
-    - aap_ocp_install_eda['namespace'] is defined
+    - aap_ocp_install_platform['namespace'] is defined
 
-- name: Create EDA instance
+- name: Create automation platform instance
   kubernetes.core.k8s:
     host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
     api_key: "{{ __aap_ocp_install_auth_results['openshift_auth']['api_key'] }}"
     validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
     state: present
-    resource_definition: "{{ lookup('template', 'eda/instance.yaml.j2') | from_yaml }}"
+    resource_definition: "{{ lookup('template', 'platform/instance.yaml.j2') | from_yaml }}"
     apply: true
 
-- name: Wait for operator to create the EDA route
+- name: Wait for operator to create the automation platform route
   kubernetes.core.k8s_info:
     host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
     api_key: "{{ __aap_ocp_install_auth_results['openshift_auth']['api_key'] }}"
     validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
     kind: Route
-    name: "{{ aap_ocp_install_eda['instance_name'] | mandatory }}"
+    name: "{{ aap_ocp_install_platform['instance_name'] | mandatory }}"
     api_version: route.openshift.io/v1
-    namespace: "{{ aap_ocp_install_eda['namespace'] | default(aap_ocp_install_namespace) }}"
-  register: __aap_ocp_install_eda_route_result
-  until: __aap_ocp_install_eda_route_result['resources']
+    namespace: "{{ aap_ocp_install_platform['namespace'] | default(aap_ocp_install_namespace) | mandatory }}"
+  register: __aap_ocp_install_platform_route_result
+  until: __aap_ocp_install_platform_route_result['resources']
   retries: 60  # Wait for 15 minutes (60*15/60)
   delay: 15
 
-- name: Store EDA route
+- name: Store automation platform route
   ansible.builtin.set_fact:
-    __aap_ocp_install_eda_route: "{{ __aap_ocp_install_eda_route_result['resources'][0]['status']['ingress'][0]['host'] }}"
+    __aap_ocp_install_platform_route: "{{ __aap_ocp_install_platform_route_result['resources'][0]['status']['ingress'][0]['host'] }}"
 
-- name: Ensure EDA login is available
+- name: Ensure automation controller login is available
   ansible.builtin.uri:
-    url: "https://{{ __aap_ocp_install_eda_route }}"
+    url: "https://{{ __aap_ocp_install_platform_route }}"
     validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
     method: GET
     status_code:
       - 200
-  register: __aap_ocp_install_eda_available
-  until: __aap_ocp_install_eda_available['status'] == 200
+  register: _aap_ocp_install_platform_available
+  until: (_aap_ocp_install_platform_available['status'] == 200) and ('migrations_notran' not in _aap_ocp_install_platform_available['url'])
   retries: 120  # Wait for 30 minutes (120*15/60)
   delay: 15
 
-- name: Create EDA console link
+- name: Create automation platform console link
   kubernetes.core.k8s:
     host: "{{ __aap_ocp_install_auth_results['openshift_auth']['host'] }}"
     api_key: "{{ __aap_ocp_install_auth_results['openshift_auth']['api_key'] }}"
     validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
     state: present
-    resource_definition: "{{ lookup('template', 'eda/consolelink.yaml.j2') | from_yaml }}"
+    resource_definition: "{{ lookup('template', 'platform/consolelink.yaml.j2') | from_yaml }}"
     apply: true
 ...
