--- a/roles/aap_ocp_install/tasks/main.yml
+++ b/roles/aap_ocp_install/tasks/main.yml
@@ -30,35 +30,15 @@
       tags:
         - operator
 
-    - name: Include Ansible Automation Platform controller install tasks
+    - name: Include Ansible Automation Platform platform install tasks
       ansible.builtin.include_tasks:
-        file: install-controller.yml
+        file: install-platform.yml
         apply:
           tags:
-            - controller
-      when: aap_ocp_install_controller is defined
+            - platform
+      when: aap_ocp_install_platform is defined
       tags:
-        - controller
-
-    - name: Include Ansible Automation Platform hub install tasks
-      ansible.builtin.include_tasks:
-        file: install-hub.yml
-        apply:
-          tags:
-            - hub
-      when: aap_ocp_install_hub is defined
-      tags:
-        - hub
-
-    - name: Include Ansible Automation Platform EDA install tasks
-      ansible.builtin.include_tasks:
-        file: install-eda.yml
-        apply:
-          tags:
-            - eda
-      when: aap_ocp_install_eda is defined
-      tags:
-        - eda
+        - platform
 
   always:
 
