--- a/roles/aap_ocp_install/tasks/pre-validate.yml
+++ b/roles/aap_ocp_install/tasks/pre-validate.yml
@@ -92,23 +92,11 @@
   when:
     - ( 'operator' in ansible_run_tags ) or ( 'all' in ansible_run_tags and aap_ocp_install_operator is defined )
 
-- name: Ensure controller variables are set
+- name: Ensure platform variables are set
   ansible.builtin.include_tasks:
-    file: pre-validate-controller.yml
+    file: pre-validate-platform.yml
   when:
-    - ( 'controller' in ansible_run_tags ) or ( 'all' in ansible_run_tags and aap_ocp_install_controller is defined )
-
-- name: Ensure hub variables are set
-  ansible.builtin.include_tasks:
-    file: pre-validate-hub.yml
-  when:
-    - ( 'hub' in ansible_run_tags ) or ( 'all' in ansible_run_tags and aap_ocp_install_hub is defined )
-
-- name: Ensure eda variables are set
-  ansible.builtin.include_tasks:
-    file: pre-validate-eda.yml
-  when:
-    - ( 'eda' in ansible_run_tags ) or ( 'all' in ansible_run_tags and aap_ocp_install_eda is defined )
+    - ( 'platform' in ansible_run_tags ) or ( 'all' in ansible_run_tags and aap_ocp_install_platform is defined )
 
 - name: Ensure no validation errors found
   ansible.builtin.debug:
