--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,7 +1,7 @@
 ---
 namespace: infra
 name: aap_utilities
-version: 1.0.0
+version: 2.5.2-devel
 description: A collection of utility roles for usage with Ansible Automation Platform
 readme: README.md
 authors:
