Updated tasks and default to parametrize async and poll to respect long running backup for AAP2.4+ with private automation hub

--- a/roles/aap_backup/defaults/main.yml
+++ b/roles/aap_backup/defaults/main.yml
@@ -5,4 +5,6 @@
 
 # Default backup vars, these are default from installer
 aap_backup_dest: /var/tmp
+aap_backup_async: 10000
+aap_backup_poll: 20
 ...
