Changes from PR code review

--- a/roles/aap_ocp_install/tasks/pre-validate-platform.yml
+++ b/roles/aap_ocp_install/tasks/pre-validate-platform.yml
@@ -140,7 +140,7 @@
           {{ __aap_ocp_install_prevalidate_errors + ["aap_ocp_install_controller['projects_storage_size'] must be a number greater than 0 with a size (e.g. 12Gi or 10000M)"] }}
 
 - name: Ensure hub storage type is valid (block)
-  when: aap_ocp_install_hub is defined
+  when: aap_ocp_install_hub is defined and aap_ocp_install_hub['storage_type'] is defined
   block:
     - name: Ensure hub storage type is valid
       ansible.builtin.assert:
