Ensure new install keys are used for component installation, and the correct hub API is tested

--- a/roles/aap_ocp_install/tasks/install-platform.yml
+++ b/roles/aap_ocp_install/tasks/install-platform.yml
@@ -63,7 +63,7 @@
     api_version: route.openshift.io/v1
     namespace: "{{ aap_ocp_install_platform['namespace'] | default(aap_ocp_install_namespace) | mandatory }}"
   when:
-    - aap_ocp_install_controller is defined
+    - aap_ocp_install_controller is defined and aap_ocp_install_controller['install'] is defined and aap_ocp_install_controller['install']
   register: __aap_ocp_install_controller_route_result
   until: __aap_ocp_install_controller_route_result['resources']
   retries: 60  # Wait for 15 minutes (60*15/60)
@@ -73,7 +73,7 @@
   ansible.builtin.set_fact:
     __aap_ocp_install_controller_route: "{{ __aap_ocp_install_controller_route_result['resources'][0]['status']['ingress'][0]['host'] }}"
   when:
-    - aap_ocp_install_controller is defined
+    - aap_ocp_install_controller is defined and aap_ocp_install_controller['install'] is defined and aap_ocp_install_controller['install']
 
 - name: Ensure automation controller API is available
   ansible.builtin.uri:
@@ -83,7 +83,7 @@
     status_code:
       - 200
   when:
-    - aap_ocp_install_controller is defined
+    - aap_ocp_install_controller is defined and aap_ocp_install_controller['install'] is defined and aap_ocp_install_controller['install']
   register: _aap_ocp_install_controller_available
   until: (_aap_ocp_install_controller_available['status'] == 200) and ('migrations_notran' not in _aap_ocp_install_controller_available['url'])
   retries: 120  # Wait for 30 minutes (120*15/60)
@@ -99,7 +99,7 @@
     api_version: route.openshift.io/v1
     namespace: "{{ aap_ocp_install_platform['namespace'] | default(aap_ocp_install_namespace) | mandatory }}"
   when:
-    - aap_ocp_install_eda is defined
+    - aap_ocp_install_eda is defined and aap_ocp_install_eda['install'] is defined and aap_ocp_install_eda['install']
   register: __aap_ocp_install_eda_route_result
   until: __aap_ocp_install_eda_route_result['resources']
   retries: 60  # Wait for 15 minutes (60*15/60)
@@ -109,7 +109,7 @@
   ansible.builtin.set_fact:
     __aap_ocp_install_eda_route: "{{ __aap_ocp_install_eda_route_result['resources'][0]['status']['ingress'][0]['host'] }}"
   when:
-    - aap_ocp_install_eda is defined
+    - aap_ocp_install_eda is defined and aap_ocp_install_eda['install'] is defined and aap_ocp_install_eda['install']
 
 - name: Ensure automation eda API is available
   ansible.builtin.uri:
@@ -119,7 +119,7 @@
     status_code:
       - 200
   when:
-    - aap_ocp_install_eda is defined
+    - aap_ocp_install_eda is defined and aap_ocp_install_eda['install'] is defined and aap_ocp_install_eda['install']
   register: _aap_ocp_install_eda_available
   until: (_aap_ocp_install_eda_available['status'] == 200) and ('migrations_notran' not in _aap_ocp_install_eda_available['url'])
   retries: 120  # Wait for 30 minutes (120*15/60)
@@ -135,7 +135,7 @@
     api_version: route.openshift.io/v1
     namespace: "{{ aap_ocp_install_platform['namespace'] | default(aap_ocp_install_namespace) | mandatory }}"
   when:
-    - aap_ocp_install_hub is defined
+    - aap_ocp_install_hub is defined and aap_ocp_install_hub['install'] is defined and aap_ocp_install_hub['install']
   register: __aap_ocp_install_hub_route_result
   until: __aap_ocp_install_hub_route_result['resources']
   retries: 60  # Wait for 15 minutes (60*15/60)
@@ -145,17 +145,17 @@
   ansible.builtin.set_fact:
     __aap_ocp_install_hub_route: "{{ __aap_ocp_install_hub_route_result['resources'][0]['status']['ingress'][0]['host'] }}"
   when:
-    - aap_ocp_install_hub is defined
+    - aap_ocp_install_hub is defined and aap_ocp_install_hub['install'] is defined and aap_ocp_install_hub['install']
 
 - name: Ensure automation hub API is available
   ansible.builtin.uri:
-    url: "https://{{ __aap_ocp_install_hub_route }}/api"
+    url: "https://{{ __aap_ocp_install_hub_route }}/api/galaxy/pulp/api/v3/"
     validate_certs: "{{ aap_ocp_install_connection['validate_certs'] | default(omit) }}"
     method: GET
     status_code:
       - 200
   when:
-    - aap_ocp_install_hub is defined
+    - aap_ocp_install_hub is defined and aap_ocp_install_hub['install'] is defined and aap_ocp_install_hub['install']
   register: _aap_ocp_install_hub_available
   until: (_aap_ocp_install_hub_available['status'] == 200) and ('migrations_notran' not in _aap_ocp_install_hub_available['url'])
   retries: 120  # Wait for 30 minutes (120*15/60)
