Add support for new platform installation method of AAP 2.5 on OpenShift (#261)
* Add EDA deployment on OCP

* Update documentation for role change

* Additional checks for EDA variables, and ability to use custom EDA namespace

* Correct linting formatting errors

* Add endline on changelog fragment

* Modifications to support the new OCP deployment method for AAP 2.5

* Template fixes identified during testing

* Make the AAP OCP Deployment backward compatible with pre AAP2.5

* Restore missing files

* Ensure Hub settings are correct

* Update documentation for OCP Installation AAP 2.5+

* Corrected trailing whitespace and line feed errors

* Remove duplication in yml file

* Pre-commit fixes (EOF and github-actions-bot changes)

* Fix Jinja templating errors

* Revert galaxy version definition

* - Allow installation of cluster-scoped AAP into a different namespace
- Wait until controller/eda/hub APIs are available before marking installation complete

* Update documentation to show 2.4- and 2.5+ example playbooks

* Changes from PR code review

* Ensure new install keys are used for component installation, and the correct hub API is tested

* Correct Lightspeed deployment setting in AAP 2.5 OCP install

* Amended README to include platform options for namespace and link text

---------

Co-authored-by: Derek Waters <dwaters@redhat.com>
Co-authored-by: Brant Evans <bevans@redhat.com>

--- a/roles/aap_ocp_install/defaults/main.yml
+++ b/roles/aap_ocp_install/defaults/main.yml
@@ -14,6 +14,10 @@
 # aap_ocp_install_operator:
 #   channel:
 
+# Variables applicable to the Ansible platform installation
+# aap_ocp_install_platform:
+#   instance_name:
+
 # Variable applicable to the controller installation
 # aap_ocp_install_controller:
 #   instance_name:
@@ -24,6 +28,11 @@
 # aap_ocp_install_hub:
 #   instance_name:
 #   link_text:
+#   storage_type:
+#   file_storage_storage_class:
+#   file_storage_size:
+#   object_storage_s3_secret:
+#   object_storage_azure_secret:
 
 # Variable applicable to the EDA installation
 # aap_ocp_install_eda:
@@ -31,4 +40,8 @@
 #   instance_name:
 #   replicas:
 #   link_text:
+
+# Variables applicable to the Lightspeed installation
+# aap_ocp_install_lightspeed:
+#
 ...
